tests/toy/neg/001699_mutation.toylang
program a = { while var a : bool a do sleep; } .
